Phone Number validation removed

--- a/oman/index.html
+++ b/oman/index.html
@@ -494,7 +494,7 @@
                                         <input class="register__input" type="text" name="email" placeholder="Email Address" required>
                                     </div>
                                 </div>
-                                <input class="register__input" type="text" name="phone" placeholder="Phone" maxlength="10" required pattern="\d{10}" title="Please enter a 10-digit phone number">
+                                <input class="register__input" type="text" name="phone" placeholder="Phone" required>
                                 <textarea class="register__input textarea"  id="#" cols="30"
                                     rows="10" name="message" placeholder="Message"></textarea>
                                 <div class="registerarea__button">
